# elastic-ai.explorer

./: .gitignore  .gitmodules  LICENSE  README.md  config.yaml  experiment_data.csv  logging.conf  mlp_for_pi.py  mlp_for_pico.py  pyproject.toml  settings.py  test_sciebo_data.py  test_single_model.py  visualize_test.py
config_files/config_defaults/: default_deployment_config.yaml  default_hwnas_config.yaml  default_model_config.yaml
config_files/config_templates/: deployment_config.yaml  hwnas_config.yaml  model_config.yaml
config_templates/: connection_config.yaml  deployment_config.yaml  hwnas_config.yaml
configs/: connection_config.yaml  experiment_config.yaml  hwnas_config.yaml  model_config.yaml
docker/: Dockerfile.deploy  Dockerfile.loader  Dockerfile.pibase  Dockerfile.pico2base  Dockerfile.picobase  Dockerfile.picocross  Dockerfile.picross
docker/code/: CMakeLists.txt  loader.cpp  measure_accuracy.cpp  measure_accuracy_mnist.cpp  measure_latency.cpp
docker/code/pico_crosscompiler/: CMakeLists.txt
docker/code/pico_crosscompiler/app_full_precision/: main.cpp  mnist_images.h  mnist_labels.h  mnist_test_images.h  model.cpp  tflite_interpreter.cpp
docker/code/pico_crosscompiler/app_int8/: main.cpp  model.cpp
docker/code/pico_crosscompiler/data/: CMakeLists.txt  mnist_features.h  mnist_images.h  model.h
docker/code/pico_crosscompiler/lstm_on_pico/: main.cpp
docker/code/pico_crosscompiler/lstm_on_pico_latency/: CMakeLists.txt  main.cpp  resolver_ops.h
docker/code/pico_crosscompiler/measure_accuracy/: CMakeLists.txt  main.cpp  resolver_ops.h
docker/code/pico_crosscompiler/measure_accuracy_quant/: CMakeLists.txt  main.cpp
docker/code/pico_crosscompiler/measure_latency/: CMakeLists.txt  main.cpp  resolver_ops.h  tflite_interpreter.cpp
docker/code/pico_crosscompiler/ml_utils/: output_functions.cpp  output_functions.h  tflite_interpreter.cpp  tflite_interpreter.h
elasticai/explorer/: config.py  cost_estimator.py  data.py  data_to_csv.py  explorer.py  generator_registry.py  hw_nas.py  knowledge_repository.py  mutable_types.py  search_space.py  train_model.py  trainer.py  utils.py  visualizer.py
elasticai/explorer/generator/: generator.py  reflection.py
elasticai/explorer/hw_nas/: constraints.py  cost_estimator.py  estimator.py  estimators.py  hw_nas.py  optimization_criteria.py  sampler.py  sampler_builder.py
elasticai/explorer/knowledge_repository/: hw_platforms.json  knowledge_repository.py
elasticai/explorer/training/: data.py  download.py  trainer.py
elasticai/explorer/utils/: data_to_csv.py  data_utils.py  deploy_on_env5.py  fpga_utils.py  logging_utils.py  run_vhdl_synthesis.py  stats.py  synthesis_utils.py  utils.py  visualize.py  visualizer.py
elasticai/generator/: generator.py
elasticai/implementations/creator_generator/: deployment.py  model_builder.py  quantization_utils.py  synthesis_utils.py
elasticai_explorer/: config.py  data_to_csv.py  explorer.py  knowledge_repository.py  trainer.py  visualizer.py
elasticai_explorer/generator/deployment/: compiler.py  device_communication.py  manager.py
elasticai_explorer/generator/model_compiler/: model_compiler.py
elasticai_explorer/hw_nas/: hw_nas.py
elasticai_explorer/hw_nas/search_space/: construct_sp.py  operations.py  search_space.yml
examples/: autoencoder_kuntze.py  creater_example.py  creator_example.py  ecg5000_example.py  env5_example.py  example_helpers.py  lstm_on_pico.py  lstm_search_space.yaml  lstm_search_space_kuntze.yaml  pi_example.py  pico2_example.py  pico_example.py  search_lstm.py  search_lstm_kuntze.py
examples/kuntze/: autoencoder_kuntze.py  search_lstm_kuntze.py
examples/kuntze/config/: hwnas_config.yaml  lstm_search_space_kuntze.yaml
examples/kuntze/results/: lstm_model_0.pt  lstm_model_0_rpi.pt  top_model_0.txt  top_model_1.txt  top_model_2.txt
examples/search_space_examples/: env5_search_space.yaml  lstm_search_space.yaml  pi_search_space.yaml  pico_search_space.yaml
experiments/only_for_integration_tests/: connection_config.yaml  hwnas_config.yaml
lstm_on_pico_src/lstm_on_pico/: CMakeLists.txt  main.cpp  resolver_ops.h
models/: models.json
models/ts_models/: model 0.pt  model_0.pt
pico_crosscompiler/: CMakeLists.txt
pico_crosscompiler/app/: model.cpp
pico_crosscompiler/app_full_precision/: CMakeLists.txt  main.cpp  model.cpp
pico_crosscompiler/app_int8/: CMakeLists.txt  main.cpp  model.cpp  model.h  tflite_interpreter.cpp  tflite_interpreter.h
tests/: integration_test_explorer_no_target.py  integration_test_explorer_with_target.py  test_deployment_and_measurements.py  test_hw_nas_setup_and_search.py  unit_tests.py
tests/integration/: test_deployment_and_measurements.py  test_hw_nas_setup_and_search.py
tests/integration_tests/: test_compiler.py  test_data.py  test_hw_nas_setup_and_search.py  test_optuna_search.py  test_pico_generate_and_compile.py  test_pico_setup_and_search.py
tests/integration_tests/samples/: sample_MLP.py  search_space.yml  test_dataset.csv
tests/integration_tests/test_configs/: constraint_hwnas_config.yaml  deployment_config.yaml  deployment_config_pico.yaml  evolution_hwnas_config.yaml  grid_hwnas_config.yaml  hwnas_config.yaml
tests/samples/: test_model.py
tests/system_tests/: example_system_test_settings.toml  system_test_settings.py  test_compiler.py  test_deployment_and_measurements.py  test_env5_deplyment_and_measurements.py  test_env5_measurements.py  test_pi_deployment_and_measurements.py  test_pico_deployment_and_measurements.py  test_pico_docker.py  test_sciebo.py  test_synthesis_vivado_server.py
tests/system_tests/samples/: ts_model_0.cpp  ts_model_0.pt  ts_model_0.tflite
tests/system_tests/test_configs/: connection_config.yaml  deployment_config.yaml  deployment_config_env5.yaml  deployment_config_pi.yaml  deployment_config_pico.yaml  hwnas_config.yaml
tests/unit_tests/: test_block_factory.py  test_compiler.py  test_construct_sp.py  test_creator_model_builder.py  test_creator_model_compiler.py  test_manager.py  test_quantization_creator.py  test_trainer.py
(+44 files in other folders)
