[project]
name = "elastic-ai.explorer"
version = "0.1.0"
description = "HW-NAS-based toolbox for optimizing DNN architectures for different target HW platforms"
authors = [{ name = "Department Intelligent Embedded Systems - University Duisburg Essen" }]
readme = "README.md"
license = "LICENSE"

requires-python = ">=3.11"
dependencies = [
    "fabric>=3.2.2",
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "python-on-whales>=0.75.1",
    "pytorch-lightning>=2.5.1",
    "torchvision==0.19.0",
    "iesude-data",
]

# Same as Black.
line-length = 88
indent-width = 4

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "python-language-server>=0.36.2",
    "setuptools<63",
    "wheel<0.38",
    "pip<23"
]
nomac = [
    "nni==3.0",
]



[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
iesude-data = { git = "https://github.com/es-ude/data.git" }

[tool.black]
preview = true
line-length = 88

[tool.pytest.ini_options]
pythonpath = [
  "."
]
minversion = "6.0"
markers = [
  "simulation: possibly slow running integration tests including hw simulation"
]
testpaths = [
    "elasticai",
    "tests",
]
python_files = ["*_test.py", "test_*.py"]
addopts = [
    "--import-mode=importlib",
    "-s"
]



[tool.pylint]
max-line-length = 88
accept-no-raise-doc = "False"
disable="C0115, C0116, C0114, E0015, W0621" #disable missing docstring messages as they incourage adding noise comments

