[project]
name = "elastic-ai.explorer"
version = "0.1.0"
description = "HW-NAS-based toolbox for optimizing DNN architectures for different target HW platforms"
authors = [{ name = "Department Intelligent Embedded Systems - University Duisburg Essen" }]
readme = "README.md"
license = "LICENSE"

requires-python = ">=3.11.11"
dependencies = [
    "fabric>=3.2.2",
    "fvcore>=0.1.5.post20221221",
    "matplotlib>=3.10.1",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "plotly>=6.0.1",
    "python-on-whales>=0.75.1",
    "scipy>=1.16.1",
    "torchvision==0.21.0",
    "torch>=2.4.0",
    "ai-edge-torch==0.5.0",
    "pyserial>=3.5",
    "pandas>=2.2.3",
    "tensorflow==2.20.0",
    "iesude-data",
    "tflite==2.18.0",
]

# Same as Black.
line-length = 88
indent-width = 4

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "python-language-server>=0.36.2",
    "setuptools<63",
    "wheel<0.38",
    "pip<23"
]



[tool.uv]
default-groups = ["dev"]
override-dependencies = ["tf-nightly; sys_platform == 'never'",]
[tool.uv.sources]
iesude-data = { git = "https://github.com/es-ude/data.git" }

[tool.black]
preview = true
line-length = 88

[tool.pytest.ini_options]

pythonpath = [
  "."
]
minversion = "6.0"
markers = [
  "simulation: possibly slow running integration tests including hw simulation",
  "hardware: slow system tests using the hardware deployment on real targets"
]
testpaths = [
    "elasticai",
    "tests",
]
python_files = ["*_test.py", "test_*.py"]
addopts = [
    "--import-mode=importlib",
    "-s"
]



[tool.pylint]
max-line-length = 88
accept-no-raise-doc = "False"
disable="C0115, C0116, C0114, E0015, W0621" #disable missing docstring messages as they incourage adding noise comments

