cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

project(model_build)
set(Torch_DIR /code/libtorch/share/cmake/Torch)
find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
add_executable(measure_latency measure_latency.cpp)
add_executable(loader loader.cpp)
target_link_libraries(measure_latency "${TORCH_LIBRARIES}")
target_link_libraries(loader "${TORCH_LIBRARIES}")
set_property(TARGET measure_latency PROPERTY CXX_STANDARD 17)
set_property(TARGET loader PROPERTY CXX_STANDARD 17)
