cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

project(model_build)
set(Torch_DIR /code/libtorch/share/cmake/Torch)
set(PROGRAM_CODE "${PROGRAM_CODE}")
find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
add_executable(model_runtime PROGRAM_CODE)
target_link_libraries(model_runtime "${TORCH_LIBRARIES}")
set_property(TARGET measure_runtime PROPERTY CXX_STANDARD 17)
