cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

project(model_build)
set(Torch_DIR /code/libtorch/share/cmake/Torch)
set(PROGRAM_CODE "${PROGRAM_CODE}")
set(NAME_OF_EXECUTABLE "${NAME_OF_EXECUTABLE}")
find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
add_executable("${NAME_OF_EXECUTABLE}" "${PROGRAM_CODE}")
target_link_libraries("${NAME_OF_EXECUTABLE}" "${TORCH_LIBRARIES}")
set_property(TARGET "${NAME_OF_EXECUTABLE}" PROPERTY CXX_STANDARD 17)
